# mcp-server-metasearch

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: verify_bocha.py  verify_firecrawl.py
src/mcp_server_metasearch/: __init__.py  __main__.py  cache.py  config.py  diagnostics.py  http_client.py  retry.py  server.py  tool_registry.py
src/mcp_server_metasearch/tools/: base.py  bocha_ai_search.py  bocha_web_search.py  exa_answer.py  exa_contents.py  exa_search.py  firecrawl_crawl.py  firecrawl_map.py  firecrawl_scrape.py  firecrawl_search.py  formatting.py  jina_deepsearch.py  jina_reader.py  jina_search.py  tavily_extract.py  tavily_research.py  tavily_search.py
tests/: test_bocha_ai_search.py  test_bocha_web_search.py  test_config.py  test_diagnostics.py  test_exa_answer.py  test_exa_contents.py  test_exa_search.py  test_firecrawl_crawl.py  test_firecrawl_map.py  test_firecrawl_scrape.py  test_firecrawl_search.py  test_jina_deepsearch.py  test_jina_reader.py  test_jina_search.py  test_retry.py  test_server.py  test_tavily_extract.py  test_tavily_research.py  test_tavily_search.py  test_tool_registry.py
